--- a/launchmon/src/linux/Makefile.am
+++ b/launchmon/src/linux/Makefile.am
@@ -29,6 +29,7 @@
 ##--------------------------------------------------------------------------------
 ##
 ##  Update Log:
+##        Apr 29 2016 DHA: Mondernize build support
 ##        Mar 09 2009 DHA: Added -rdynamic to export process control 
 ##                         primities to the dynamic symbol table for
 ##                         dlopen to pick up.
@@ -45,58 +46,57 @@
 ##        Dec 27 2006 DHA: Created file.
 ##
 
-SUBDIRS                 = lmon_api
+SUBDIRS = lmon_api
+BASE_SRC_DIR = $(top_srcdir)/launchmon/src
+API_SRC_DIR = $(srcdir)/lmon_api
+VPATH = $(BASE_SRC_DIR):$(srcdir):$(API_SRC_DIR)
+AM_CPPFLAGS = -I$(BASE_SRC_DIR) -I@ARCHHEADER@
 
-MYBOOST_SUPPORT         = -I$(top_srcdir)/@MYBOOSTLOC@
+bin_PROGRAMS = launchmon
+launchmon_SOURCES = \
+  main.cxx \
+  sdbg_linux_launchmon.cxx \
+  $(API_SRC_DIR)/lmon_lmonp_msg.cxx \
+  sdbg_linux_mach.cxx \
+  $(API_SRC_DIR)/lmon_say_msg.cxx \
+  sdbg_proc_service.cxx \
+  $(BASE_SRC_DIR)/sdbg_self_trace.cxx \
+  $(BASE_SRC_DIR)/sdbg_opt.cxx \
+  $(BASE_SRC_DIR)/sdbg_rm_map.cxx \
+  $(BASE_SRC_DIR)/sdbg_base_bp.hxx \
+  $(BASE_SRC_DIR)/sdbg_base_launchmon_impl.hxx  \
+  $(BASE_SRC_DIR)/sdbg_base_tracer.hxx \
+  $(BASE_SRC_DIR)/sdbg_self_trace.hxx \
+  $(BASE_SRC_DIR)/sdbg_base_driver.hxx \
+  $(BASE_SRC_DIR)/sdbg_base_mach.hxx \
+  $(BASE_SRC_DIR)/sdbg_signal_hlr.hxx \
+  $(BASE_SRC_DIR)/sdbg_base_driver_impl.hxx  \
+  $(BASE_SRC_DIR)/sdbg_base_mach_impl.hxx  \
+  $(BASE_SRC_DIR)/sdbg_event_manager.hxx \
+  $(BASE_SRC_DIR)/sdbg_signal_hlr_impl.hxx \
+  $(BASE_SRC_DIR)/sdbg_base_exception.hxx \
+  $(BASE_SRC_DIR)/sdbg_base_symtab.hxx \
+  $(BASE_SRC_DIR)/sdbg_event_manager_impl.hxx  \
+  $(BASE_SRC_DIR)/sdbg_std.hxx \
+  $(BASE_SRC_DIR)/sdbg_base_launchmon.hxx \
+  $(BASE_SRC_DIR)/sdbg_base_symtab_impl.hxx \
+  $(BASE_SRC_DIR)/sdbg_opt.hxx \
+  $(BASE_SRC_DIR)/sdbg_rm_map.hxx \
+  $(BASE_SRC_DIR)/sdbg_base_spawner.hxx \
+  sdbg_linux_bp.hxx \
+  sdbg_linux_launchmon.hxx  \
+  sdbg_linux_ptracer_impl.hxx  \
+  sdbg_linux_symtab_impl.hxx \
+  sdbg_proc_service.hxx \
+  sdbg_linux_driver.hxx  \
+  sdbg_linux_mach.hxx \
+  sdbg_linux_std.hxx \
+  sdbg_linux_driver_impl.hxx \
+  sdbg_linux_ptracer.hxx \
+  sdbg_linux_symtab.hxx 
 
-INCLUDES                = $(MYBOOST_SUPPORT) -I.. -I@ARCHHEADER@
-#BITS                    = @LIBBITSUFFIX@
+launchmon_LDADD = @LIBELF@ @LIBDL@
+launchmon_CFLAGS = @LNCHR_BIT_FLAGS@ #$(AM_CFLAGS)
+launchmon_CXXFLAGS = @LNCHR_BIT_FLAGS@ #$(AM_CXXFLAGS)
+launchmon_LDFLAGS = -rdynamic @LNCHR_BIT_FLAGS@ $(AM_LDFLAGS)
 
-bin_PROGRAMS            = launchmon
-launchmon_SOURCES       = main.cxx \
-                          sdbg_linux_launchmon.cxx \
-                          lmon_api/lmon_lmonp_msg.cxx \
-                          sdbg_linux_mach.cxx \
-                          lmon_api/lmon_say_msg.cxx \
-                          sdbg_proc_service.cxx \
-                          ../sdbg_self_trace.cxx \
-                          ../sdbg_opt.cxx \
-                          ../sdbg_rm_map.cxx \
-                          ../sdbg_base_bp.hxx \
-                          ../sdbg_base_launchmon_impl.hxx  \
-                          ../sdbg_base_tracer.hxx \
-                          ../sdbg_self_trace.hxx \
-                          ../sdbg_base_driver.hxx \
-                          ../sdbg_base_mach.hxx \
-                          ../sdbg_signal_hlr.hxx \
-                          ../sdbg_base_driver_impl.hxx  \
-                          ../sdbg_base_mach_impl.hxx  \
-                          ../sdbg_event_manager.hxx \
-                          ../sdbg_signal_hlr_impl.hxx \
-                          ../sdbg_base_exception.hxx \
-                          ../sdbg_base_symtab.hxx \
-                          ../sdbg_event_manager_impl.hxx  \
-                          ../sdbg_std.hxx \
-                          ../sdbg_base_launchmon.hxx \
-                          ../sdbg_base_symtab_impl.hxx \
-                          ../sdbg_opt.hxx \
-                          ../sdbg_rm_map.hxx \
-                          ../sdbg_base_spawner.hxx \
-                          sdbg_linux_bp.hxx \
-                          sdbg_linux_launchmon.hxx  \
-                          sdbg_linux_ptracer_impl.hxx  \
-                          sdbg_linux_symtab_impl.hxx \
-                          sdbg_proc_service.hxx \
-                          sdbg_linux_driver.hxx  \
-                          sdbg_linux_mach.hxx \
-                          sdbg_linux_std.hxx \
-                          sdbg_linux_driver_impl.hxx \
-                          sdbg_linux_ptracer.hxx \
-                          sdbg_linux_symtab.hxx 
-
-launchmon_LDADD         = @LIBELF@ @LIBDL@
-launchmon_CFLAGS        = @LNCHR_BIT_FLAGS@ #$(AM_CFLAGS)
-launchmon_CXXFLAGS      = @LNCHR_BIT_FLAGS@ #$(AM_CXXFLAGS)
-launchmon_LDFLAGS       = -rdynamic @LNCHR_BIT_FLAGS@ $(AM_LDFLAGS)
-
-## EOF
